# olomipay

./: .gitignore  README.md  SKILL.md  app-screens.jsx  colors_and_type.css  components.jsx  icons.jsx  index.html  manifest.json  marketing.jsx  screen-kit.jsx  screens-account.jsx  screens-grow.jsx  screens-money.jsx  setup-windows.bat
.github/workflows/: android.yml  ci.yml
admin-panel/: .env.example  .env.production  README.md  SUPPORT_PLAYBOOK.md  index.html  package-lock.json  package.json
admin-panel/src/: App.tsx  Dashboard.tsx  LoginPage.tsx  authProvider.ts  dataProvider.ts
backend/: .env.example  .gitignore  Dockerfile  SECRET_ROTATION.md  SECURITY_ENV_AUDIT.md  package-lock.json  package.json  railway.toml  start.sh  tsconfig.json
backend/prisma/: schema.prisma
backend/scripts/: gen-secrets.mjs  pg-dev.mjs  seed.ts  setup-fee-wallet.mjs
backend/src/: index.ts
contracts/: Cargo.toml
contracts/bond/: Cargo.toml
contracts/chama/: Cargo.toml
contracts/lending/: Cargo.toml
contracts/olomipay/: Cargo.toml
contracts/savings_vault/: Cargo.toml
contracts/savings_vault/src/: lib.rs
contracts/staking_pool/: Cargo.toml
docs/: MAINNET_SMOKE_TEST.md  MVP.md  OPERATIONS_PLAYBOOK.md  OlomiPay-MVP.docx  USD_SAVINGS_PLUS.md  build-mvp-docx.js
docs/compliance/: 03-fund-flows.md  (+11 more)
frontend/: .gitignore  capacitor.config.ts  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
mobile/: .gitignore  README.md  capacitor.config.ts  package-lock.json  package.json
website/: index.html
(+252 files in other folders)
